[gd_scene load_steps=22 format=1]

[ext_resource path="res://tscns/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://tscns/ui/DockEditMode.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/titles/grassCenter.png" type="Texture" id=3]
[ext_resource path="res://sprites/titles/grass.png" type="Texture" id=4]
[ext_resource path="res://tscns/ui/DockPlayerMode.tscn" type="PackedScene" id=5]
[ext_resource path="res://tscns/ui/PauseMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://tscns/ui/MechList.tscn" type="PackedScene" id=7]
[ext_resource path="res://tscns/ui/Help.tscn" type="PackedScene" id=8]
[ext_resource path="res://tscns/levels/00/tiles.tres" type="TileSet" id=9]
[ext_resource path="res://sprites/titles/cloud1.png" type="Texture" id=10]
[ext_resource path="res://sprites/titles/cloud7.png" type="Texture" id=11]
[ext_resource path="res://tscns/levels/00/buidling.tscn" type="PackedScene" id=12]
[ext_resource path="res://sprites/titles/doorWindowTop.png" type="Texture" id=13]
[ext_resource path="res://sprites/titles/windowCheckered.png" type="Texture" id=14]
[ext_resource path="res://scripts/prez.gd" type="Script" id=15]

[sub_resource type="ConcavePolygonShape2D" id=1]

custom_solver_bias = 0.0
segments = Vector2Array( -70, 0, -70, 490, -70, 490, 1190, 490, 1190, 490, 1190, 0, 1190, 0, 1680, 0, 1680, 0, 1680, 980, 1680, 980, -560, 980, -560, 980, -560, 0, -560, 0, -70, 0 )

[sub_resource type="Animation" id=2]

resource/name = "Dwig"
length = 2.5
loop = false
step = 0.1

[sub_resource type="Animation" id=3]

length = 17.0
loop = false
step = 0.1

[sub_resource type="Animation" id=4]

length = 10.0
loop = false
step = 0.1

[sub_resource type="Animation" id=5]

length = 9.0
loop = false
step = 0.1

[sub_resource type="Animation" id=6]

length = 2.5
loop = false
step = 0.1

[node name="SceneRoot" type="Node2D"]

process/pause_mode = 2
transform/pos = Vector2( -1.36047, 0 )
z/z = -5
__meta__ = { "__editor_plugin_screen__":"Script" }

[node name="Player" parent="." instance=ExtResource( 1 )]

transform/pos = Vector2( 69.6941, 438.649 )
jumpf = 200

[node name="DockEditMode" parent="." instance=ExtResource( 2 )]

visibility/visible = false
transform/pos = Vector2( 407.427, 285.624 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = { "_editor_collapsed":true }

[node name="Polygon2D" type="Polygon2D" parent="StaticBody2D"]

polygon = Vector2Array( -70, 0, -70, 490, 1190, 490, 1190, 0, 2100, 0, 2100, 1120, -980, 1120, -980, 0 )
uv = Vector2Array(  )
color = Color( 1, 1, 1, 1 )
offset = Vector2( 0, 0 )
texture/texture = ExtResource( 3 )
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Polygon2D1" type="CollisionPolygon2D" parent="StaticBody2D"]

build_mode = 1
polygon = Vector2Array( -70, 0, -70, 490, 1190, 490, 1190, 0, 1680, 0, 1680, 980, -560, 980, -560, 0 )
shape_range = Vector2( -1, -1 )
trigger = false

[node name="Polygon2D3" type="Polygon2D" parent="StaticBody2D"]

transform/pos = Vector2( 444, 510 )
z/z = 2
polygon = Vector2Array( 750, -20, -510, -20, -510, 50, 750, 50 )
uv = Vector2Array(  )
color = Color( 1, 1, 1, 1 )
offset = Vector2( 0, 0 )
texture/texture = ExtResource( 4 )
texture/offset = Vector2( 0, 20 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Polygon2D4" type="Polygon2D" parent="StaticBody2D"]

transform/pos = Vector2( -100, 40 )
z/z = 2
polygon = Vector2Array( 30, -40, -880, -40, -880, 30, 30, 30 )
uv = Vector2Array(  )
color = Color( 1, 1, 1, 1 )
offset = Vector2( 0, 0 )
texture/texture = ExtResource( 4 )
texture/offset = Vector2( 0, -30 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Polygon2D5" type="Polygon2D" parent="StaticBody2D"]

transform/pos = Vector2( 1601.55, 61.5451 )
z/z = 2
polygon = Vector2Array( 500, -60, -410, -60, -410, 10, 500, 10 )
uv = Vector2Array(  )
color = Color( 1, 1, 1, 1 )
offset = Vector2( 0, 0 )
texture/texture = ExtResource( 4 )
texture/offset = Vector2( 0, -10 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="DockPlayerMode" parent="." instance=ExtResource( 5 )]

offset = Vector2( 0, -450 )

[node name="Pause Menu" parent="." instance=ExtResource( 6 )]

visibility/visible = false

[node name="MechList" parent="." instance=ExtResource( 7 )]

visibility/visible = false
offset = Vector2( 0, -450 )

[node name="HelpDialog" parent="." instance=ExtResource( 8 )]

visibility/visible = false
visibility/self_opacity = 0.7
margin/left = 88.0
margin/top = 292.0
margin/right = 695.0
margin/bottom = 487.0

[node name="BG" type="Node2D" parent="."]

z/z = -5
__meta__ = { "_editor_collapsed":true }

[node name="Polygon2D" type="Polygon2D" parent="BG"]

transform/pos = Vector2( -196.996, -193.947 )
transform/scale = Vector2( 1.35001, 1.30921 )
polygon = Vector2Array( -560, -420, -560, 980, 1681.47, 983.616, 1680, -420 )
uv = Vector2Array(  )
color = Color( 0, 0.792848, 1, 1 )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="TileMap" type="TileMap" parent="BG"]

z/z = 1
mode = 0
tile_set = ExtResource( 9 )
cell/size = Vector2( 70, 70 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( -327685, 37, -262152, 32, -262151, 536870945, -262150, 536870945, -262149, 536870945, -262148, 536870945, -262147, 536870945, -327662, 37, -196616, 29, -196615, 23, -196614, 23, -196613, 23, -196612, 23, -196611, 23, -131079, 12, -131078, 536870925, -131077, 536870925, -131076, 536870925, -131075, 536870924, -65543, 1, -65542, 1, -65541, 1, -65540, 1, -65539, 1, -131067, 37, -7, 6, -6, 6, -5, 0, -4, 6, -3, 536870918, -65535, 36, -65534, 36, -65533, 36, -65532, 36, -65531, 36, 1, 23, 2, 23, 3, 23, 4, 23, 5, 23, 131067, 10, 65537, 12, 65538, 13, 65539, 13, 65540, 13, 65541, 11, 131073, 9, 131074, 2, 131075, 2, 131076, 3, 131077, 10, 131081, 536870945, 131082, 536870945, 131083, 536870945, 131084, 536870945, 131085, 536870945, 131086, 536870945, 131087, 536870945, 196609, 9, 196610, 3, 196611, 2, 196612, 4, 196613, 10, 196617, 1610612759, 196618, 1610612759, 196619, 1610612759, 196620, 1610612759, 196621, 1610612759, 196622, 1610612759, 196623, 1610612759, 262145, 9, 262146, 2, 262147, 2, 262148, 2, 262149, 10, 262153, 12, 262154, 17, 262155, 17, 262156, 17, 262157, 17, 262158, 17, 262159, 536870924, 327681, 9, 327682, 4, 327683, 2, 327684, 2, 327685, 10, 327689, 536870932, 327690, 15, 327691, 22, 327692, 15, 327693, 1610612758, 327694, 15, 327695, 20, 393217, 6, 393218, 6, 393219, 0, 393220, 6, 393221, 8, 393225, 536870920, 393226, 19, 393227, 19, 393228, 0, 393229, 19, 393230, 19, 393231, 8 )

[node name="TileMap1" type="TileMap" parent="BG"]

transform/pos = Vector2( 0, 71.5073 )
z/z = 1
mode = 0
tile_set = ExtResource( 9 )
cell/size = Vector2( 70, 70 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( -196615, 11, -196614, 536870924, -196613, 536870924, -196612, 536870924, -196611, 536870923, -262125, 14, -131079, 8, -131075, 536870920, -196589, 1, -65543, 5, -65541, 0, -65539, 536870917, 1, 11, 2, 536870924, 3, 536870924, 4, 536870924, 5, 536870923, 131067, 10, 65537, 8, 65538, 1, 65539, 536870914, 65540, 1, 65541, 536870920, 65550, 536870949, 131073, 8, 131074, 1, 131075, 536870916, 131076, 1, 131077, 536870920, 196609, 8, 196610, 1, 196611, 1610612750, 196612, 1, 196613, 536870920, 196617, 11, 196618, 536870924, 196619, 536870924, 196620, 536870924, 196621, 536870924, 196622, 536870924, 196623, 536870923, 262145, 8, 262146, 1, 262147, 1, 262148, 1, 262149, 536870920, 262153, 8, 262154, 1, 262155, 1610612750, 262156, 1, 262157, 1073741838, 262158, 1, 262159, 536870920, 327681, 5, 327683, 0, 327685, 536870917, 327689, 5, 327690, 6, 327691, 6, 327693, 6, 327694, 6, 327695, 536870917, 458747, 14 )

[node name="Sprite" type="Sprite" parent="BG"]

transform/pos = Vector2( 25, -147 )
texture = ExtResource( 10 )

[node name="Sprite1" type="Sprite" parent="BG"]

transform/pos = Vector2( 585, -147 )
texture = ExtResource( 11 )

[node name="Sprite2" type="Sprite" parent="BG"]

transform/pos = Vector2( 1075, -147 )
texture = ExtResource( 10 )

[node name="Sprite3" type="Sprite" parent="BG"]

transform/pos = Vector2( 1657, -361 )
texture = ExtResource( 11 )

[node name="Sprite4" type="Sprite" parent="BG"]

transform/pos = Vector2( -583, -431 )
texture = ExtResource( 11 )

[node name="Sprite5" type="Sprite" parent="BG"]

transform/pos = Vector2( 1845, -567 )
texture = ExtResource( 10 )

[node name="Sprite6" type="Sprite" parent="BG"]

transform/pos = Vector2( -745, -637 )
texture = ExtResource( 10 )

[node name="Sprite7" type="Sprite" parent="BG"]

transform/pos = Vector2( -45, -567 )
texture = ExtResource( 10 )

[node name="Sprite8" type="Sprite" parent="BG"]

transform/pos = Vector2( 1285, -567 )
texture = ExtResource( 10 )

[node name="Sprite9" type="Sprite" parent="BG"]

transform/pos = Vector2( 585, -427 )
texture = ExtResource( 11 )

[node name="Node2D" parent="BG" instance=ExtResource( 12 )]

transform/pos = Vector2( 1202.94, -53.1269 )

[node name="Node2D1" parent="BG" instance=ExtResource( 12 )]

transform/pos = Vector2( -929.721, -56.9216 )

[node name="Sprite 2" type="Sprite" parent="BG"]

transform/pos = Vector2( 244.981, 388.503 )
z/z = 1
texture = ExtResource( 13 )

[node name="Sprite10" type="Sprite" parent="BG"]

transform/pos = Vector2( 874.32, 387.553 )
z/z = 1
texture = ExtResource( 13 )

[node name="Sprite11" type="Sprite" parent="BG"]

transform/pos = Vector2( -315.235, -102.091 )
z/z = 1
texture = ExtResource( 13 )

[node name="Sprite" type="Sprite" parent="BG/Sprite11"]

transform/pos = Vector2( -103.635, 25.9087 )
texture = ExtResource( 14 )

[node name="Sprite1" type="Sprite" parent="BG/Sprite11"]

transform/pos = Vector2( 99.9334, 22.2074 )
texture = ExtResource( 14 )

[node name="Sprite2" type="Sprite" parent="BG/Sprite11"]

transform/pos = Vector2( 477.46, 497.816 )
texture = ExtResource( 14 )

[node name="Sprite3" type="Sprite" parent="BG/Sprite11"]

transform/pos = Vector2( 649.567, 499.667 )
texture = ExtResource( 14 )

[node name="Sprite4" type="Sprite" parent="BG/Sprite11"]

transform/pos = Vector2( 645.866, 364.572 )
texture = ExtResource( 14 )

[node name="Sprite4 2" type="Sprite" parent="BG/Sprite11"]

transform/pos = Vector2( 473.758, 362.721 )
texture = ExtResource( 14 )

[node name="Sprite5" type="Sprite" parent="BG/Sprite11"]

transform/pos = Vector2( 647.716, 242.431 )
texture = ExtResource( 14 )

[node name="Sprite43" type="Sprite" parent="BG/Sprite11"]

transform/pos = Vector2( 475.609, 240.58 )
texture = ExtResource( 14 )

[node name="Sprite44" type="Sprite" parent="BG/Sprite11"]

transform/pos = Vector2( 1045.6, 521.874 )
texture = ExtResource( 14 )

[node name="Sprite6" type="Sprite" parent="BG/Sprite11"]

transform/pos = Vector2( 1336.15, 521.874 )
texture = ExtResource( 14 )

[node name="StaticBody2D1" type="StaticBody2D" parent="."]

input/pickable = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = { "_editor_collapsed":true }

[node name="Polygon2D" type="CollisionPolygon2D" parent="StaticBody2D1"]

build_mode = 0
polygon = Vector2Array( -490, 0, -560, 0, -560, -420, 1680, -420, 1680, 0, 1610, 0, 1610, -350, -490, -350 )
shape_range = Vector2( -1, -1 )
trigger = false

[node name="prez" type="AnimationPlayer" parent="."]

process/pause_mode = 2
playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Dwig = SubResource( 2 )
anims/Help = SubResource( 3 )
anims/Mech = SubResource( 4 )
anims/Player = SubResource( 5 )
anims/Rown = SubResource( 6 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""
script/script = ExtResource( 15 )

[node name="Timer" type="Timer" parent="prez"]

process_mode = 1
wait_time = 15.0
one_shot = false
autostart = false

[node name="PrezM1" type="Node2D" parent="prez"]

transform/pos = Vector2( -379.377, 12.9543 )
__meta__ = { "_editor_collapsed":true }

[node name="RowPos" type="Position2D" parent="prez/PrezM1"]

transform/pos = Vector2( 1049.52, 404.347 )

[node name="BallPos" type="Position2D" parent="prez/PrezM1"]

transform/pos = Vector2( 1049.52, 208.347 )

[node name="PPos" type="Position2D" parent="prez/PrezM1"]

transform/pos = Vector2( 770.52, 404.347 )

[node name="PrezM2" type="Node2D" parent="prez"]

__meta__ = { "_editor_collapsed":true }

[node name="DiwgPos" type="Position2D" parent="prez/PrezM2"]

transform/pos = Vector2( 558.131, 475.192 )

[node name="BallPos" type="Position2D" parent="prez/PrezM2"]

transform/pos = Vector2( 632.322, 140.517 )

[node name="BoxPos" type="Position2D" parent="prez/PrezM2"]

transform/pos = Vector2( 515.322, 140.517 )

[node name="PPos" type="Position2D" parent="prez/PrezM2"]

transform/pos = Vector2( 389.131, 418.192 )

[node name="PrezM3" type="Position2D" parent="prez"]

transform/pos = Vector2( 418.916, -35.1494 )

[node name="PrezM4" type="Position2D" parent="prez"]

transform/pos = Vector2( 418.095, -35.5518 )


